# DiscordianAI

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PR_DESCRIPTION.md  QA_REVIEW_REPORT.md  README.md  bot.py  codecov.yml  config.ini.example  discordian.sh  docker-compose.yml  original_bot.py  pr_224_api_comments.json  pr_224_details.json  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.txt  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  combine-prs.yml  copilot-review.yml  dependency-review.yml  docker.yml  flake8-pytest.yml  ghcr-publish.yaml  pr-checks.yml  python-app.yml
contrib/systemd/: discordian-bot@.service
docs/: API_Validation.md  Architecture.md  Configuration.md  ConnectionPooling.md  Daemon.md  Development.md  Docker.md  EmbedLimits.md  HybridMode.md  Makefile  MessageSplitting.md  OpenAI.md  Perplexity.md  Python_Versions.md  README.md  Security.md  Setup.md  WebScraping.md
docs/api/: api_context.rst  api_utils.rst  api_validation.rst  bot.rst  bot_manager.rst  caching.rst  conf.py  config.rst  connection_pool.rst  conversation_manager.rst  dependencies.rst  dependency_check.rst  discord_bot.rst  discord_embeds.rst  error_handling.rst  health_checks.rst  health_server.rst  index.rst  logging_adapter.rst  main.rst  message_processor.rst  message_router.rst  message_splitter.rst  models.rst  openai_processing.rst  perplexity_processing.rst  rate_limits.rst  smart_orchestrator.rst  structured_logging.rst  web_scraper.rst
scripts/: README.md  debug_perplexity_citations.py
src/: __init__.py  api_context.py  api_utils.py  api_validation.py  bot.py  bot_manager.py  caching.py  config.py  connection_pool.py  conversation_manager.py  conversations.py  dependencies.py  dependency_check.py  discord_bot.py  discord_embeds.py  error_handling.py  health_checks.py  health_server.py  logging_adapter.py  main.py  message_processor.py  message_router.py  message_splitter.py  message_utils.py  models.py  openai_processing.py  perplexity_processing.py  py.typed  rate_limits.py  smart_orchestrator.py  structured_logging.py  web_scraper.py
tests/: conftest.py  test_api_context.py  test_api_integration.py  test_api_utils.py  test_api_validation.py  test_bot.py  test_bot_basic.py  test_bot_coverage.py  test_bot_manager.py  test_caching.py  test_check_rate_limit.py  test_citation_integration.py  test_config.py  test_config_coverage.py  test_connection_pool.py  test_conversation.py  test_conversation_manager_threads.py  test_conversations.py  test_dependencies.py  test_dependency_check.py  test_discord_bot.py  test_discord_embeds.py  test_docs.py  test_error_handling.py  test_get_conversation_summary.py  test_health_checks.py  test_health_server.py  test_load_stress.py  test_logging_adapter.py  test_main.py  test_message_router.py  test_message_sending.py  test_message_splitting.py  test_message_utils.py  test_models.py  test_openai_processing.py  test_openai_processing_additional.py  test_openai_processing_coverage.py  test_performance_integration.py  test_perplexity_processing.py  (+7 more)
tmp/: discordianai.txt  pr_body.md
