[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiscordianAI"
version = "0.1.0"
description = "A Discord bot that uses OpenAI's GPT API to generate responses."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "johndotpub", email = "github@john.pub"}]
requires-python = ">=3.12"
dependencies = [
    "discord.py>=1.7.3",
    "openai>=0.10.2",
    "python-dotenv>=0.19.0"
]
urls = {"Homepage" = "https://github.com/johndotpub/DiscordianAI"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
discordianai = "src.main:main"

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "flake8",
    "pytest",
    "pytest-asyncio",
    "tox"
]

[tool.flake8]
max-line-length = 99
max-complexity = 16

[tool.pytest.ini_options]
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 99

